[gd_scene load_steps=17 format=3 uid="uid://bcan4ssdl6xe8"]

[ext_resource type="StyleBox" uid="uid://cgxu8klvvwq83" path="res://ui/rounded_panel_orange.tres" id="1_0bs6e"]
[ext_resource type="Script" uid="uid://cy0hf7drjmhq0" path="res://scenes/title_screen/title_screen.gd" id="1_ksq0p"]
[ext_resource type="PackedScene" uid="uid://chp646yq2krhh" path="res://scenes/title_screen/emojis.tscn" id="2_atygf"]
[ext_resource type="StyleBox" uid="uid://bq1egb14cda57" path="res://ui/rounded_panel_purple.tres" id="3_mrdy1"]
[ext_resource type="StyleBox" uid="uid://bqa2nytr2ods4" path="res://ui/title_panel.tres" id="4_082gr"]
[ext_resource type="PackedScene" uid="uid://cj1mom8fj17ap" path="res://scenes/title_screen/handy_config_box.tscn" id="4_e4hg6"]
[ext_resource type="StyleBox" uid="uid://dp6i4l2kqejq5" path="res://ui/rounded_panel_start_hover.tres" id="6_jor4d"]
[ext_resource type="PackedScene" uid="uid://dttds3kuq88d3" path="res://scenes/title_screen/highscore_container.tscn" id="6_mgukb"]
[ext_resource type="StyleBox" uid="uid://ts12ubcn6ne" path="res://ui/rounded_panel_start.tres" id="7_5olki"]
[ext_resource type="StyleBox" uid="uid://cgp5rrh0fi5pf" path="res://ui/rounded_panel_howtoplay.tres" id="8_5olki"]
[ext_resource type="StyleBox" uid="uid://cyishuq76faoc" path="res://ui/rounded_panel_howtoplay_hover.tres" id="8_ectsu"]
[ext_resource type="StyleBox" uid="uid://ectt20ddfq2f" path="res://ui/rounded_panel_exit_hover.tres" id="9_dktcb"]
[ext_resource type="StyleBox" uid="uid://pq10vctlkt37" path="res://ui/rounded_panel_exit.tres" id="10_ectsu"]
[ext_resource type="PackedScene" uid="uid://dwesryglekge2" path="res://scenes/title_screen/how_to_play_box.tscn" id="14_tvm32"]
[ext_resource type="PackedScene" uid="uid://b4keb3q83utsv" path="res://scenes/popup_box.tscn" id="15_xholb"]
[ext_resource type="Script" uid="uid://d4msg6xtekugj" path="res://scenes/popup_box.gd" id="16_ktl6d"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ksq0p")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Emojis" parent="." instance=ExtResource("2_atygf")]

[node name="FullscreenButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 60.0
text = "‚õ∂ Fullscreen"

[node name="InstallButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -148.0
offset_right = 350.0
offset_bottom = -98.0
grow_vertical = 0
theme_override_styles/normal = ExtResource("1_0bs6e")
text = "‚öôÔ∏è INSTALL DEPS"

[node name="HandyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -198.0
offset_right = 350.0
offset_bottom = -148.0
grow_vertical = 0
theme_override_styles/normal = ExtResource("3_mrdy1")
text = "üéÆ HANDY CONFIG"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.0
offset_top = 25.0
offset_right = 334.0
offset_bottom = 48.0
grow_horizontal = 2
text = "üéØ Reach Round 100 without ejaculating ‚Ä¢ üé≤ Roll dice to advance ‚Ä¢ ‚è∏Ô∏è Use pauses wisely"
horizontal_alignment = 1

[node name="TitleContainer" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("4_082gr")

[node name="GameTitle" type="Label" parent="TitleContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.5
offset_top = 30.0
offset_right = 225.5
offset_bottom = 118.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.3, 0.6, 1, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 64
text = "üéÆ FAPLAND üéÆ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_top = 120.0
offset_right = 134.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 28
text = "üé≤ Handy Edition üé≤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 2

[node name="StartButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("6_jor4d")
theme_override_styles/normal = ExtResource("7_5olki")
text = "üöÄ START GAME"

[node name="HowToPlayButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = ExtResource("8_ectsu")
theme_override_styles/normal = ExtResource("8_5olki")
text = "‚ùì HOW TO PLAY"

[node name="ExitButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("9_dktcb")
theme_override_styles/normal = ExtResource("10_ectsu")
text = "üö™ EXIT"

[node name="HighscoreContainer" parent="." instance=ExtResource("6_mgukb")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 832.0
offset_top = 328.0
offset_right = 1132.0
offset_bottom = 628.0
grow_horizontal = 1
grow_vertical = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -39.0
offset_right = 241.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.6, 0.8, 0.7)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "FapLand v1.0 ‚Ä¢ Handy Edition"
vertical_alignment = 1

[node name="Overlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="HandyConfigBox" parent="." node_paths=PackedStringArray("overlay") instance=ExtResource("4_e4hg6")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
overlay = NodePath("../Overlay")

[node name="HowToPlayBox" parent="." node_paths=PackedStringArray("overlay") instance=ExtResource("14_tvm32")]
visible = false
layout_mode = 1
overlay = NodePath("../Overlay")

[node name="PopupBox" parent="." instance=ExtResource("15_xholb")]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 0.0
offset_right = 300.0
offset_bottom = 80.0
grow_horizontal = 2
script = ExtResource("16_ktl6d")

[connection signal="pressed" from="FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="InstallButton" to="." method="_on_install_button_pressed"]
[connection signal="pressed" from="HandyButton" to="." method="_on_handy_button_pressed"]
[connection signal="pressed" from="MenuContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
